Allow wildcard CORS origins with credentials